src/objects/Endpoint_URIs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ContactId_URI_Salesforce_Certificate__c</fullName>
        <label>ContactId URI Salesforce Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_of_Records_Sync__c</fullName>
        <label>Limit of Records Sync</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesforceCertificates_URI__c</fullName>
        <label>SalesforceCertificates URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrailheadBadges_URI_Trailhead__c</fullName>
        <label>TrailheadBadges URI Trailhead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10K_Community_Landing_Page__c</fullName>
        <label>10K Community Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Endpoint URIs</label>
</CustomObject>